project(wxWindows)

# set include directories
include_directories(
	include
	contrib/include
	lib/mswdllu
	src/jpeg
	src/png
	src/tiff
	src/regex
	src/zlib
	contrib/src/xrc/expat/xmlparse
	contrib/src/xrc/expat/xmltok
)

# common code
set(COMMON_SOURCES
    src/common/appcmn.cpp
    src/common/artprov.cpp
    src/common/artstd.cpp
    src/common/choiccmn.cpp
    src/common/clipcmn.cpp
    src/common/clntdata.cpp
    src/common/cmdline.cpp
    src/common/cmdproc.cpp
    src/common/cmndata.cpp
    src/common/config.cpp
    src/common/containr.cpp
    src/common/cshelp.cpp
    src/common/ctrlcmn.cpp
    src/common/ctrlsub.cpp
    src/common/datetime.cpp
    src/common/datstrm.cpp
    src/common/db.cpp
    src/common/dbgrid.cpp
    src/common/dbtable.cpp
    src/common/dcbase.cpp
    src/common/dircmn.cpp
    src/common/dlgcmn.cpp
    src/common/dndcmn.cpp
    src/common/dobjcmn.cpp
    src/common/docmdi.cpp
    src/common/docview.cpp
    src/common/dosyacc.c
    src/common/dseldlg.cpp
    src/common/dynarray.cpp
    src/common/dynlib.cpp
    src/common/dynload.cpp
    src/common/effects.cpp
    src/common/encconv.cpp
    src/common/event.cpp
    src/common/extended.c
    src/common/fddlgcmn.cpp
    src/common/ffile.cpp
    src/common/file.cpp
    src/common/fileconf.cpp
    src/common/filefn.cpp
    src/common/filename.cpp
    src/common/filesys.cpp
    src/common/fontcmn.cpp
    src/common/fontmap.cpp
    src/common/framecmn.cpp
    src/common/fs_inet.cpp
    src/common/fs_mem.cpp
    src/common/fs_zip.cpp
    src/common/ftp.cpp
    src/common/gaugecmn.cpp
    src/common/gdicmn.cpp
    src/common/geometry.cpp
    src/common/gifdecod.cpp
    src/common/hash.cpp
    src/common/hashmap.cpp
    src/common/helpbase.cpp
    src/common/http.cpp
    src/common/iconbndl.cpp
    src/common/imagall.cpp
    src/common/imagbmp.cpp
    src/common/image.cpp
    src/common/imagfill.cpp
    src/common/imaggif.cpp
    src/common/imagiff.cpp
    src/common/imagjpeg.cpp
    src/common/imagpcx.cpp
    src/common/imagpng.cpp
    src/common/imagpnm.cpp
    src/common/imagtiff.cpp
    src/common/imagxpm.cpp
    src/common/intl.cpp
    src/common/ipcbase.cpp
    src/common/layout.cpp
    src/common/lboxcmn.cpp
    src/common/list.cpp
    src/common/log.cpp
    src/common/longlong.cpp
    src/common/matrix.cpp
    src/common/memory.cpp
    src/common/menucmn.cpp
    src/common/mimecmn.cpp
    src/common/module.cpp
    src/common/msgout.cpp
    src/common/mstream.cpp
    src/common/nbkbase.cpp
    src/common/object.cpp
    src/common/odbc.cpp
    src/common/paper.cpp
    src/common/popupcmn.cpp
    src/common/prntbase.cpp
    src/common/process.cpp
    src/common/protocol.cpp
    src/common/quantize.cpp
    src/common/radiocmn.cpp
    src/common/regex.cpp
    src/common/resource.cpp
    src/common/rgncmn.cpp
    src/common/sckaddr.cpp
    src/common/sckfile.cpp
    src/common/sckipc.cpp
    src/common/sckstrm.cpp
    src/common/settcmn.cpp
    src/common/sizer.cpp
    src/common/socket.cpp
    src/common/statbar.cpp
    src/common/strconv.cpp
    src/common/stream.cpp
    src/common/string.cpp
    src/common/sysopt.cpp
    src/common/tbarbase.cpp
    src/common/textbuf.cpp
    src/common/textcmn.cpp
    src/common/textfile.cpp
    src/common/timercmn.cpp
    src/common/tokenzr.cpp
    src/common/toplvcmn.cpp
    src/common/treebase.cpp
    src/common/txtstrm.cpp
    src/common/unzip.c
    src/common/url.cpp
    src/common/utilscmn.cpp
    src/common/valgen.cpp
    src/common/validate.cpp
    src/common/valtext.cpp
    src/common/variant.cpp
    src/common/wfstream.cpp
    src/common/wincmn.cpp
    src/common/wxchar.cpp
    src/common/wxexpr.cpp
    src/common/xpmdecod.cpp
    src/common/zipstrm.cpp
    src/common/zstream.cpp
)

# generic code
set(GENERIC_SOURCES
    src/generic/busyinfo.cpp
    src/generic/calctrl.cpp
    src/generic/choicdgg.cpp
    src/generic/dcbuffer.cpp
    src/generic/dcpsg.cpp
    src/generic/dirctrlg.cpp
    src/generic/dragimgg.cpp
    src/generic/grid.cpp
    src/generic/gridctrl.cpp
    src/generic/gridsel.cpp
    src/generic/laywin.cpp
    src/generic/logg.cpp
    src/generic/numdlgg.cpp
    src/generic/panelg.cpp
    src/generic/progdlgg.cpp
    src/generic/prop.cpp
    src/generic/propform.cpp
    src/generic/proplist.cpp
    src/generic/sashwin.cpp
    src/generic/scrlwing.cpp
    src/generic/spinctlg.cpp
    src/generic/splash.cpp
    src/generic/splitter.cpp
    src/generic/statusbr.cpp
    src/generic/tbarsmpl.cpp
    src/generic/textdlgg.cpp
    src/generic/tipdlg.cpp
    src/generic/tipwin.cpp
    src/generic/treectlg.cpp
    src/generic/treelay.cpp
    src/generic/wizard.cpp
)

# html code
set(HTML_SOURCES
    src/html/helpctrl.cpp
    src/html/helpdata.cpp
    src/html/helpfrm.cpp
    src/html/htmlcell.cpp
    src/html/htmlfilt.cpp
    src/html/htmlpars.cpp
    src/html/htmltag.cpp
    src/html/htmlwin.cpp
    src/html/htmprint.cpp
    src/html/m_dflist.cpp
    src/html/m_fonts.cpp
    src/html/m_hline.cpp
    src/html/m_image.cpp
    src/html/m_layout.cpp
    src/html/m_links.cpp
    src/html/m_list.cpp
    src/html/m_pre.cpp
    src/html/m_style.cpp
    src/html/m_tables.cpp
    src/html/winpars.cpp
)

# MSW backend code
set(MSW_SOURCES
    src/msw/accel.cpp
    src/msw/app.cpp
    src/msw/bitmap.cpp
    src/msw/bmpbuttn.cpp
    src/msw/brush.cpp
    src/msw/button.cpp
    src/msw/caret.cpp
    src/msw/checkbox.cpp
    src/msw/checklst.cpp
    src/msw/choice.cpp
    src/msw/clipbrd.cpp
    src/msw/colordlg.cpp
    src/msw/colour.cpp
    src/msw/combobox.cpp
    src/msw/control.cpp
    src/msw/curico.cpp
    src/msw/cursor.cpp
    src/msw/data.cpp
    src/msw/dc.cpp
    src/msw/dcclient.cpp
    src/msw/dcmemory.cpp
    src/msw/dcprint.cpp
    src/msw/dcscreen.cpp
    src/msw/dde.cpp
    src/msw/dialog.cpp
    src/msw/dialup.cpp
    src/msw/dib.cpp
    src/msw/dibutils.cpp
    src/msw/dir.cpp
    src/msw/dirdlg.cpp
    src/msw/dragimag.cpp
    src/msw/dummy.cpp
    src/msw/enhmeta.cpp
    src/msw/evtloop.cpp
    src/msw/fdrepdlg.cpp
    src/msw/filedlg.cpp
    src/msw/font.cpp
    src/msw/fontdlg.cpp
    src/msw/fontenum.cpp
    src/msw/fontutil.cpp
    src/msw/frame.cpp
    src/msw/gauge95.cpp
    src/msw/gdiimage.cpp
    src/msw/gdiobj.cpp
    src/msw/glcanvas.cpp
    src/msw/gsocket.c
    src/msw/gsockmsw.c
    src/msw/helpbest.cpp
    src/msw/helpchm.cpp
    src/msw/helpwin.cpp
    src/msw/icon.cpp
    src/msw/imaglist.cpp
    src/msw/iniconf.cpp
    src/msw/joystick.cpp
    src/msw/listbox.cpp
    src/msw/listctrl.cpp
    src/msw/main.cpp
    src/msw/mdi.cpp
    src/msw/menu.cpp
    src/msw/menuitem.cpp
    src/msw/metafile.cpp
    src/msw/mimetype.cpp
    src/msw/minifram.cpp
    src/msw/msgdlg.cpp
    src/msw/mslu.cpp
    src/msw/nativdlg.cpp
    src/msw/notebook.cpp
    src/msw/ole/automtn.cpp
    src/msw/ole/dataobj.cpp
    src/msw/ole/dropsrc.cpp
    src/msw/ole/droptgt.cpp
    src/msw/ole/oleutils.cpp
    src/msw/ole/uuid.cpp
    src/msw/ownerdrw.cpp
    src/msw/palette.cpp
    src/msw/pen.cpp
    src/msw/penwin.cpp
    src/msw/popupwin.cpp
    src/msw/printdlg.cpp
    src/msw/printwin.cpp
    src/msw/radiobox.cpp
    src/msw/radiobut.cpp
    src/msw/regconf.cpp
    src/msw/region.cpp
    src/msw/registry.cpp
    src/msw/scrolbar.cpp
    src/msw/settings.cpp
    src/msw/slider95.cpp
    src/msw/snglinst.cpp
    src/msw/spinbutt.cpp
    src/msw/spinctrl.cpp
    src/msw/statbmp.cpp
    src/msw/statbox.cpp
    src/msw/statbr95.cpp
    src/msw/statline.cpp
    src/msw/stattext.cpp
    src/msw/tabctrl.cpp
    src/msw/taskbar.cpp
    src/msw/tbar95.cpp
    src/msw/textctrl.cpp
    src/msw/tglbtn.cpp
    src/msw/thread.cpp
    src/msw/timer.cpp
    src/msw/tooltip.cpp
    src/msw/toplevel.cpp
    src/msw/treectrl.cpp
    src/msw/utils.cpp
    src/msw/utilsexc.cpp
    src/msw/uxtheme.cpp
    src/msw/volume.cpp
    src/msw/wave.cpp
    src/msw/window.cpp
    src/msw/version.rc
)

# jpeg
set(JPEG_SOURCES
    src/jpeg/jcapimin.c
    src/jpeg/jcapistd.c
    src/jpeg/jccoefct.c
    src/jpeg/jccolor.c
    src/jpeg/jcdctmgr.c
    src/jpeg/jchuff.c
    src/jpeg/jcinit.c
    src/jpeg/jcmainct.c
    src/jpeg/jcmarker.c
    src/jpeg/jcmaster.c
    src/jpeg/jcomapi.c
    src/jpeg/jcparam.c
    src/jpeg/jcphuff.c
    src/jpeg/jcprepct.c
    src/jpeg/jcsample.c
    src/jpeg/jctrans.c
    src/jpeg/jdapimin.c
    src/jpeg/jdapistd.c
    src/jpeg/jdatadst.c
    src/jpeg/jdatasrc.c
    src/jpeg/jdcoefct.c
    src/jpeg/jdcolor.c
    src/jpeg/jddctmgr.c
    src/jpeg/jdhuff.c
    src/jpeg/jdinput.c
    src/jpeg/jdmainct.c
    src/jpeg/jdmarker.c
    src/jpeg/jdmaster.c
    src/jpeg/jdmerge.c
    src/jpeg/jdphuff.c
    src/jpeg/jdpostct.c
    src/jpeg/jdsample.c
    src/jpeg/jdtrans.c
    src/jpeg/jerror.c
    src/jpeg/jfdctflt.c
    src/jpeg/jfdctfst.c
    src/jpeg/jfdctint.c
    src/jpeg/jidctflt.c
    src/jpeg/jidctfst.c
    src/jpeg/jidctint.c
    src/jpeg/jidctred.c
    src/jpeg/jmemmgr.c
    src/jpeg/jmemnobs.c
    src/jpeg/jquant1.c
    src/jpeg/jquant2.c
    src/jpeg/jutils.c
)

# png
set(PNG_SOURCES
    src/png/png.c
    src/png/pngerror.c
    src/png/pngget.c
    src/png/pngmem.c
    src/png/pngpread.c
    src/png/pngread.c
    src/png/pngrio.c
    src/png/pngrtran.c
    src/png/pngrutil.c
    src/png/pngset.c
    src/png/pngtrans.c
    src/png/pngwio.c
    src/png/pngwrite.c
    src/png/pngwtran.c
    src/png/pngwutil.c
)

# tiff
set(TIFF_SOURCES
    src/tiff/tif_aux.c
    src/tiff/tif_close.c
    src/tiff/tif_codec.c
    src/tiff/tif_compress.c
    src/tiff/tif_dir.c
    src/tiff/tif_dirinfo.c
    src/tiff/tif_dirread.c
    src/tiff/tif_dirwrite.c
    src/tiff/tif_dumpmode.c
    src/tiff/tif_error.c
    src/tiff/tif_fax3.c
    src/tiff/tif_fax3sm.c
    src/tiff/tif_flush.c
    src/tiff/tif_getimage.c
    src/tiff/tif_jpeg.c
    src/tiff/tif_luv.c
    src/tiff/tif_lzw.c
    src/tiff/tif_next.c
    src/tiff/tif_open.c
    src/tiff/tif_packbits.c
    src/tiff/tif_pixarlog.c
    src/tiff/tif_predict.c
    src/tiff/tif_print.c
    src/tiff/tif_read.c
    src/tiff/tif_strip.c
    src/tiff/tif_swab.c
    src/tiff/tif_thunder.c
    src/tiff/tif_tile.c
    src/tiff/tif_version.c
    src/tiff/tif_warning.c
    src/tiff/tif_win32.c
    src/tiff/tif_write.c
    src/tiff/tif_zip.c
)

# regex
set(REGEX_SOURCES
    src/regex/regcomp.c
    src/regex/regerror.c
    src/regex/regexec.c
    src/regex/regfree.c
)

# zlib
set(ZLIB_SOURCES
    src/zlib/adler32.c
    src/zlib/compress.c
    src/zlib/crc32.c
    src/zlib/deflate.c
    src/zlib/gzio.c
    src/zlib/infblock.c
    src/zlib/infcodes.c
    src/zlib/inffast.c
    src/zlib/inflate.c
    src/zlib/inftrees.c
    src/zlib/infutil.c
    src/zlib/trees.c
    src/zlib/uncompr.c
    src/zlib/zutil.c
)

# includes
set(MAIN_INCLUDES
    include/wx/accel.h
    include/wx/app.h
    include/wx/artprov.h
    include/wx/bitmap.h
    include/wx/bmpbuttn.h
    include/wx/brush.h
    include/wx/buffer.h
    include/wx/build.h
    include/wx/busyinfo.h
    include/wx/button.h
    include/wx/calctrl.h
    include/wx/caret.h
    include/wx/checkbox.h
    include/wx/checklst.h
    include/wx/chkconf.h
    include/wx/choicdlg.h
    include/wx/choice.h
    include/wx/clipbrd.h
    include/wx/clntdata.h
    include/wx/cmdline.h
    include/wx/cmdproc.h
    include/wx/cmndata.h
    include/wx/colordlg.h
    include/wx/colour.h
    include/wx/combobox.h
    include/wx/confbase.h
    include/wx/config.h
    include/wx/containr.h
    include/wx/control.h
    include/wx/cshelp.h
    include/wx/ctrlsub.h
    include/wx/cursor.h
    include/wx/dataobj.h
    include/wx/date.h
    include/wx/datetime.h
    include/wx/datstrm.h
    include/wx/db.h
    include/wx/dbgrid.h
    include/wx/dbkeyg.h
    include/wx/dbtable.h
    include/wx/dc.h
    include/wx/dcbuffer.h
    include/wx/dcclient.h
    include/wx/dcmemory.h
    include/wx/dcprint.h
    include/wx/dcps.h
    include/wx/dcscreen.h
    include/wx/dde.h
    include/wx/debug.h
    include/wx/defs.h
    include/wx/dialog.h
    include/wx/dialup.h
    include/wx/dir.h
    include/wx/dirctrl.h
    include/wx/dirdlg.h
    include/wx/dnd.h
    include/wx/docmdi.h
    include/wx/docview.h
    include/wx/dragimag.h
    include/wx/dynarray.h
    include/wx/dynlib.h
    include/wx/dynload.h
    include/wx/effects.h
    include/wx/encconv.h
    include/wx/event.h
    include/wx/expr.h
    include/wx/fdrepdlg.h
    include/wx/features.h
    include/wx/ffile.h
    include/wx/file.h
    include/wx/fileconf.h
    include/wx/filedlg.h
    include/wx/filefn.h
    include/wx/filename.h
    include/wx/filesys.h
    include/wx/font.h
    include/wx/fontdlg.h
    include/wx/fontenc.h
    include/wx/fontenum.h
    include/wx/fontmap.h
    include/wx/fontutil.h
    include/wx/frame.h
    include/wx/fs_inet.h
    include/wx/fs_mem.h
    include/wx/fs_zip.h
    include/wx/gauge.h
    include/wx/gdicmn.h
    include/wx/gdiobj.h
    include/wx/generic/accel.h
    include/wx/generic/calctrl.h
    include/wx/generic/caret.h
    include/wx/generic/choicdgg.h
    include/wx/generic/colrdlgg.h
    include/wx/generic/dcpsg.h
    include/wx/generic/dirctrlg.h
    include/wx/generic/dirdlgg.h
    include/wx/generic/dragimgg.h
    include/wx/generic/fdrepdlg.h
    include/wx/generic/filedlgg.h
    include/wx/generic/fontdlgg.h
    include/wx/generic/grid.h
    include/wx/generic/gridctrl.h
    include/wx/generic/gridg.h
    include/wx/generic/helpext.h
    include/wx/generic/helphtml.h
    include/wx/generic/imaglist.h
    include/wx/generic/laywin.h
    include/wx/generic/listctrl.h
    include/wx/generic/mdig.h
    include/wx/generic/msgdlgg.h
    include/wx/generic/notebook.h
    include/wx/generic/paletteg.h
    include/wx/generic/panelg.h
    include/wx/generic/printps.h
    include/wx/generic/prntdlgg.h
    include/wx/generic/progdlgg.h
    include/wx/generic/sashwin.h
    include/wx/generic/scrolwin.h
    include/wx/generic/spinctlg.h
    include/wx/generic/splash.h
    include/wx/generic/splitter.h
    include/wx/generic/statline.h
    include/wx/generic/statusbr.h
    include/wx/generic/tabg.h
    include/wx/generic/textdlgg.h
    include/wx/generic/timer.h
    include/wx/generic/treectlg.h
    include/wx/generic/wizard.h
    include/wx/geometry.h
    include/wx/gifdecod.h
    include/wx/glcanvas.h
    include/wx/grid.h
    include/wx/gsocket.h
    include/wx/hash.h
    include/wx/hashmap.h
    include/wx/help.h
    include/wx/helpbase.h
    include/wx/helphtml.h
    include/wx/helpwin.h
    include/wx/html/forcelnk.h
    include/wx/html/helpctrl.h
    include/wx/html/helpdata.h
    include/wx/html/helpfrm.h
    include/wx/html/htmlcell.h
    include/wx/html/htmldefs.h
    include/wx/html/htmlfilt.h
    include/wx/html/htmlpars.h
    include/wx/html/htmltag.h
    include/wx/html/htmlwin.h
    include/wx/html/htmprint.h
    include/wx/html/m_templ.h
    include/wx/html/winpars.h
    include/wx/icon.h
    include/wx/iconbndl.h
    include/wx/imagbmp.h
    include/wx/image.h
    include/wx/imaggif.h
    include/wx/imagiff.h
    include/wx/imagjpeg.h
    include/wx/imaglist.h
    include/wx/imagpcx.h
    include/wx/imagpng.h
    include/wx/imagpnm.h
    include/wx/imagtiff.h
    include/wx/imagxpm.h
    include/wx/intl.h
    include/wx/ioswrap.h
    include/wx/ipc.h
    include/wx/ipcbase.h
    include/wx/isql.h
    include/wx/isqlext.h
    include/wx/joystick.h
    include/wx/layout.h
    include/wx/laywin.h
    include/wx/list.h
    include/wx/listbase.h
    include/wx/listbox.h
    include/wx/listctrl.h
    include/wx/log.h
    include/wx/longlong.h
    include/wx/matrix.h
    include/wx/mdi.h
    include/wx/memconf.h
    include/wx/memory.h
    include/wx/memtext.h
    include/wx/menu.h
    include/wx/menuitem.h
    include/wx/metafile.h
    include/wx/mimetype.h
    include/wx/minifram.h
    include/wx/module.h
    include/wx/msgdlg.h
    include/wx/msgout.h
    include/wx/mstream.h
    include/wx/msw/accel.h
    include/wx/msw/app.h
    include/wx/msw/bitmap.h
    include/wx/msw/bmpbuttn.h
    include/wx/msw/brush.h
    include/wx/msw/button.h
    include/wx/msw/caret.h
    include/wx/msw/checkbox.h
    include/wx/msw/checklst.h
    include/wx/msw/choice.h
    include/wx/msw/clipbrd.h
    include/wx/msw/colordlg.h
    include/wx/msw/colour.h
    include/wx/msw/combobox.h
    include/wx/msw/control.h
    include/wx/msw/curico.h
    include/wx/msw/curicop.h
    include/wx/msw/cursor.h
    include/wx/msw/dc.h
    include/wx/msw/dcclient.h
    include/wx/msw/dcmemory.h
    include/wx/msw/dcprint.h
    include/wx/msw/dcscreen.h
    include/wx/msw/dde.h
    include/wx/msw/dialog.h
    include/wx/msw/dib.h
    include/wx/msw/dibutils.h
    include/wx/msw/dirdlg.h
    include/wx/msw/dragimag.h
    include/wx/msw/enhmeta.h
    include/wx/msw/fdrepdlg.h
    include/wx/msw/filedlg.h
    include/wx/msw/font.h
    include/wx/msw/fontdlg.h
    include/wx/msw/frame.h
    include/wx/msw/gauge95.h
    include/wx/msw/gaugemsw.h
    include/wx/msw/gccpriv.h
    include/wx/msw/gdiimage.h
    include/wx/msw/gdiobj.h
    include/wx/msw/glcanvas.h
    include/wx/msw/helpbest.h
    include/wx/msw/helpchm.h
    include/wx/msw/helpwin.h
    include/wx/msw/icon.h
    include/wx/msw/imaglist.h
    include/wx/msw/iniconf.h
    include/wx/msw/joystick.h
    include/wx/msw/listbox.h
    include/wx/msw/listctrl.h
    include/wx/msw/mdi.h
    include/wx/msw/menu.h
    include/wx/msw/menuitem.h
    include/wx/msw/metafile.h
    include/wx/msw/mimetype.h
    include/wx/msw/minifram.h
    include/wx/msw/missing.h
    include/wx/msw/msgdlg.h
    include/wx/msw/mslu.h
    include/wx/msw/msvcrt.h
    include/wx/msw/notebook.h
    include/wx/msw/palette.h
    include/wx/msw/pen.h
    include/wx/msw/printdlg.h
    include/wx/msw/printwin.h
    include/wx/msw/private.h
    include/wx/msw/radiobox.h
    include/wx/msw/radiobut.h
    include/wx/msw/regconf.h
    include/wx/msw/region.h
    include/wx/msw/registry.h
    include/wx/msw/scrolbar.h
    include/wx/msw/slider95.h
    include/wx/msw/slidrmsw.h
    include/wx/msw/spinbutt.h
    include/wx/msw/spinctrl.h
    include/wx/msw/statbmp.h
    include/wx/msw/statbox.h
    include/wx/msw/statbr95.h
    include/wx/msw/statline.h
    include/wx/msw/stattext.h
    include/wx/msw/tabctrl.h
    include/wx/msw/taskbar.h
    include/wx/msw/tbar95.h
    include/wx/msw/tbarmsw.h
    include/wx/msw/textctrl.h
    include/wx/msw/tglbtn.h
    include/wx/msw/timer.h
    include/wx/msw/tooltip.h
    include/wx/msw/toplevel.h
    include/wx/msw/treectrl.h
    include/wx/msw/wave.h
    include/wx/msw/window.h
    include/wx/msw/winundef.h
    include/wx/notebook.h
    include/wx/object.h
    include/wx/odbc.h
    include/wx/ownerdrw.h
    include/wx/palette.h
    include/wx/panel.h
    include/wx/paper.h
    include/wx/pen.h
    include/wx/platform.h
    include/wx/popupwin.h
    include/wx/print.h
    include/wx/printdlg.h
    include/wx/prntbase.h
    include/wx/process.h
    include/wx/progdlg.h
    include/wx/prop.h
    include/wx/propform.h
    include/wx/proplist.h
    include/wx/radiobox.h
    include/wx/radiobut.h
    include/wx/regex.h
    include/wx/region.h
    include/wx/resource.h
    include/wx/sashwin.h
    include/wx/sckaddr.h
    include/wx/sckipc.h
    include/wx/sckstrm.h
    include/wx/scrolbar.h
    include/wx/scrolwin.h
    include/wx/settings.h
    include/wx/sizer.h
    include/wx/slider.h
    include/wx/snglinst.h
    include/wx/socket.h
    include/wx/spinbutt.h
    include/wx/spinctrl.h
    include/wx/splash.h
    include/wx/splitter.h
    include/wx/stack.h
    include/wx/statbmp.h
    include/wx/statbox.h
    include/wx/statline.h
    include/wx/stattext.h
    include/wx/statusbr.h
    include/wx/strconv.h
    include/wx/stream.h
    include/wx/string.h
    include/wx/sysopt.h
    include/wx/tab.h
    include/wx/tabctrl.h
    include/wx/taskbar.h
    include/wx/tbarbase.h
    include/wx/tbarsmpl.h
    include/wx/textbuf.h
    include/wx/textctrl.h
    include/wx/textdlg.h
    include/wx/textfile.h
    include/wx/tglbtn.h
    include/wx/thread.h
    include/wx/time.h
    include/wx/timer.h
    include/wx/tipdlg.h
    include/wx/tipwin.h
    include/wx/tokenzr.h
    include/wx/toolbar.h
    include/wx/tooltip.h
    include/wx/toplevel.h
    include/wx/treebase.h
    include/wx/treectrl.h
    include/wx/txtstrm.h
    include/wx/types.h
    include/wx/url.h
    include/wx/utils.h
    include/wx/valgen.h
    include/wx/validate.h
    include/wx/valtext.h
    include/wx/variant.h
    include/wx/vector.h
    include/wx/version.h
    include/wx/volume.h
    include/wx/wave.h
    include/wx/wfstream.h
    include/wx/window.h
    include/wx/wizard.h
    include/wx/wx.h
    include/wx/wxchar.h
    include/wx/wxexpr.h
    include/wx/wxhtml.h
    include/wx/wxprec.h
    include/wx/wx_cw.h
    include/wx/wx_cw_cm.h
    include/wx/wx_cw_d.h
    include/wx/xpmdecod.h
    include/wx/zipstrm.h
    include/wx/zstream.h
)

# xrc
set(XRC_SOURCES
    contrib/src/xrc/expat/xmlparse/xmlparse.c
    contrib/src/xrc/expat/xmltok/xmlrole.c
    contrib/src/xrc/expat/xmltok/xmltok.c
    contrib/src/xrc/xh_bmp.cpp
    contrib/src/xrc/xh_bmpbt.cpp
    contrib/src/xrc/xh_bttn.cpp
    contrib/src/xrc/xh_cald.cpp
    contrib/src/xrc/xh_chckb.cpp
    contrib/src/xrc/xh_chckl.cpp
    contrib/src/xrc/xh_choic.cpp
    contrib/src/xrc/xh_combo.cpp
    contrib/src/xrc/xh_dlg.cpp
    contrib/src/xrc/xh_frame.cpp
    contrib/src/xrc/xh_gauge.cpp
    contrib/src/xrc/xh_gdctl.cpp
    contrib/src/xrc/xh_html.cpp
    contrib/src/xrc/xh_listb.cpp
    contrib/src/xrc/xh_listc.cpp
    contrib/src/xrc/xh_menu.cpp
    contrib/src/xrc/xh_notbk.cpp
    contrib/src/xrc/xh_panel.cpp
    contrib/src/xrc/xh_radbt.cpp
    contrib/src/xrc/xh_radbx.cpp
    contrib/src/xrc/xh_scrol.cpp
    contrib/src/xrc/xh_scwin.cpp
    contrib/src/xrc/xh_sizer.cpp
    contrib/src/xrc/xh_slidr.cpp
    contrib/src/xrc/xh_spin.cpp
    contrib/src/xrc/xh_split.cpp
    contrib/src/xrc/xh_stbmp.cpp
    contrib/src/xrc/xh_stbox.cpp
    contrib/src/xrc/xh_stlin.cpp
    contrib/src/xrc/xh_sttxt.cpp
    contrib/src/xrc/xh_text.cpp
    contrib/src/xrc/xh_toolb.cpp
    contrib/src/xrc/xh_tree.cpp
    contrib/src/xrc/xh_unkwn.cpp
    contrib/src/xrc/xh_wizrd.cpp
    contrib/src/xrc/xml.cpp
    contrib/src/xrc/xmlres.cpp
    contrib/src/xrc/xmlrsall.cpp
)

# build wxWindows dynamic library
add_library(wxWindows SHARED ${MAIN_INCLUDES} ${COMMON_SOURCES} ${GENERIC_SOURCES} ${HTML_SOURCES} ${JPEG_SOURCES} ${PNG_SOURCES} ${TIFF_SOURCES} ${REGEX_SOURCES} ${ZLIB_SOURCES} ${XRC_SOURCES} ${MSW_SOURCES})
set_target_properties(wxWindows PROPERTIES FOLDER "External")

# set wxWindows debug or release definitions
if(CMAKE_BUILD_TYPE MATCHES "Debug")
    target_compile_definitions(wxWindows PRIVATE DEBUG=1 _DEBUG=1)
else()
    target_compile_definitions(wxWindows PRIVATE NDEBUG=1)
endif()

# set wxWindows DLL and Unicode flags
target_compile_definitions(wxWindows PRIVATE _USRDLL=1 STRICT=1 WXMAKINGDLL=1 WXXMLISDLL=1 UNICODE=1)

# link requirements
if(MSVC)
    # disable CRT deprecation warnings and set WINVER to 0x0500 to get Windows 2000 support for NLS functions
    target_compile_definitions(wxWindows PRIVATE _CRT_SECURE_NO_WARNINGS=1 _CRT_SECURE_NO_DEPRECATE=1 _CRT_NONSTDC_NO_DEPRECATE=1 _SCL_SECURE_NO_WARNINGS=1 WINVER=0x0500)

    # link against default Windows libraries
	target_link_libraries(wxWindows PRIVATE kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib comctl32.lib advapi32.lib wsock32.lib rpcrt4.lib wininet.lib winmm.lib)

    # reset default struct packing for MSVC
    target_compile_options(wxWindows PRIVATE /Zp8)
endif()

# copy wxWindows dll into correct Binaries folder
add_custom_command(TARGET wxWindows POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:wxWindows> ${UNREAL_BIN_PATH}/wxWindows${CMAKE_SHARED_LIBRARY_SUFFIX}
	COMMENT "Copying wxWindows dll to UNREAL_BINARIES_DIRECTORY" VERBATIM
)